log

Thu 17 Aug 2023 08:32:12 PM UTC: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
8450766
Thu 17 Aug 2023 08:36:30 PM UTC: 
 exercises.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
test.c: In function ‘reverseArray’:
test.c:382:5: error: ‘main’ is normally a non-static function [-Werror=main]
  382 | int main(int argc, char *argv[]) {
      |     ^~~~
test.c:410:1: error: expected declaration or statement at end of input
  410 | }
      | ^
test.c:7:6: error: unused variable ‘msg’ [-Werror=unused-variable]
    7 | char msg[300];
      |      ^~~
At top level:
test.c:382:5: error: ‘main’ defined but not used [-Werror=unused-function]
  382 | int main(int argc, char *argv[]) {
      |     ^~~~
test.c:47:6: error: ‘readIntArray’ defined but not used [-Werror=unused-function]
   47 | void readIntArray(int arr[], int *size) {
      |      ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
d34daeb
Thu 17 Aug 2023 08:37:37 PM UTC: 
 exercises.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 20/70
8748444
Thu 17 Aug 2023 08:41:36 PM UTC: 
 exercises.c | 32 +++++++++++++++++++++++++++++++-
 1 file changed, 31 insertions(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
899266e
Thu 17 Aug 2023 08:45:13 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
784a8fa
Thu 17 Aug 2023 08:56:25 PM UTC: 
 exercises.c | 18 +++++++++---------
 1 file changed, 9 insertions(+), 9 deletions(-)
 tests:  0|4
total_score: 30/70
585cd71
Fri 18 Aug 2023 10:37:09 PM UTC: 
 exercises.c | 32 +++++++++++++++++++++++++++++++-
 1 file changed, 31 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c:120:1: error: expected identifier or ‘(’ before ‘}’ token
  120 | }
      | ^
Compilation failed
5ac43e8
Fri 18 Aug 2023 10:38:56 PM UTC: 
 exercises.c | 17 +++++++++++------
 1 file changed, 11 insertions(+), 6 deletions(-)
 tests:  0|3
total_score: 40/70
deaa772
Fri 18 Aug 2023 10:45:43 PM UTC: 
 exercises.c | 24 +++++++++++++++++++++---
 1 file changed, 21 insertions(+), 3 deletions(-)
 tests:  0|2
total_score: 50/70
aceab6b
Fri 18 Aug 2023 10:51:18 PM UTC: 
 exercises.c | 18 ++++++++++++++++--
 1 file changed, 16 insertions(+), 2 deletions(-)
 tests:  0|1
total_score: 60/70
44d78c4
Fri 18 Aug 2023 11:06:32 PM UTC: 
 exercises.c | 42 +++++++++++++++++++++++++++++++++++++++---
 1 file changed, 39 insertions(+), 3 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘crearListaEnlazada’:
exercises.c:226:3: error: ‘nuevoNodo’ undeclared (first use in this function)
  226 |   nuevoNodo->numero = arr[i];
      |   ^~~~~~~~~
exercises.c:226:3: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:226:27: error: ‘i’ undeclared (first use in this function)
  226 |   nuevoNodo->numero = arr[i];
      |                           ^
Compilation failed
730072d
Fri 18 Aug 2023 11:11:18 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:1:
exercises.c: In function ‘crearListaEnlazada’:
exercises.c:227:12: error: invalid type argument of ‘->’ (have ‘Nodo’ {aka ‘struct nodo’})
  227 |   nuevoNodo->numero = arr[i];
      |            ^~
exercises.c:227:27: error: ‘i’ undeclared (first use in this function)
  227 |   nuevoNodo->numero = arr[i];
      |                           ^
exercises.c:227:27: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:228:12: error: invalid type argument of ‘->’ (have ‘Nodo’ {aka ‘struct nodo’})
  228 |   nuevoNodo->siguiente = NULL;
      |            ^~
exercises.c:233:12: error: incompatible types when assigning to type ‘Nodo *’ {aka ‘struct nodo *’} from type ‘Nodo’ {aka ‘struct nodo’}
  233 |     head = nuevoNodo;
      |            ^~~~~~~~~
exercises.c:234:12: error: incompatible types when assigning to type ‘Nodo *’ {aka ‘struct nodo *’} from type ‘Nodo’ {aka ‘struct nodo’}
  234 |     tail = nuevoNodo;
      |            ^~~~~~~~~
exercises.c:237:23: error: incompatible types when assigning to type ‘struct nodo *’ from type ‘Nodo’ {aka ‘struct nodo’}
  237 |     tail->siguiente = nuevoNodo;
      |                       ^~~~~~~~~
exercises.c:238:12: error: incompatible types when assigning to type ‘Nodo *’ {aka ‘struct nodo *’} from type ‘Nodo’ {aka ‘struct nodo’}
  238 |     tail = nuevoNodo;
      |            ^~~~~~~~~
Compilation failed
cf385ee
